base/VideoService/deployment-postgresql.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:16-alpine
          ports:
            - containerPort: 5435
              protocol: TCP
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/postgresql/data
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-data
