base/VideoService/deployment-videoservice.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: videoservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: videoservice
  template:
    metadata:
      labels:
        app: videoservice
    spec:
      containers:
        - name: videoservice
          image: "ghcr.io/coendv/group1-videoservice:dev"
          ports:
            - containerPort: 8085
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
