base/VideoService/service-postgresql.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5435
      targetPort: 5435
