base/VideoService/service-videoservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: videoservice
  labels:
    app: videoservice
    app.kubernetes.io/component: videoservice
    app.kubernetes.io/instance: videoservice
    app.kubernetes.io/name: videoservice
spec:
  type: ClusterIP
  selector:
    app: videoservice
  ports:
    - name: 8085-tcp
      protocol: TCP
      port: 8085
      targetPort: 8085
